testcases/error/unsigned_arith_shift.veryl
module unsigned_arith_shift {
    let _a: logic<8> = 8'd1 <<< 2;
}
